feat: Codigo e testes